# c-_project

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  todo-list.rc  todoitem.h
